--- a/index.html
+++ b/index.html
@@ -31,16 +31,16 @@
         
         <!-- Enable Browser History by replacing useBrowserHistory tokens with two hyphens -->
         <!-- BEGIN Browser History required section -->
-        <link rel="stylesheet" type="text/css" href="history/history.css" />
-        <script type="text/javascript" src="history/history.js"></script>
+        <link rel="stylesheet" type="text/css" href="bin-release/history/history.css" />
+        <script type="text/javascript" src="bin-release/history/history.js"></script>
         <!-- END Browser History required section -->  
             
-        <script type="text/javascript" src="swfobject.js"></script>
+        <script type="text/javascript" src="bin-release/swfobject.js"></script>
         <script type="text/javascript">
             // For version detection, set to min. required Flash Player version, or 0 (or 0.0.0), for no version detection. 
             var swfVersionStr = "11.4.0";
             // To use express install, set to playerProductInstall.swf, otherwise the empty string. 
-            var xiSwfUrlStr = "playerProductInstall.swf";
+            var xiSwfUrlStr = "bin-release/playerProductInstall.swf";
             var flashvars = {};
             var params = {};
             params.quality = "high";
@@ -52,7 +52,7 @@
             attributes.name = "MineSweepContext";
             attributes.align = "middle";
             swfobject.embedSWF(
-                "MineSweepContext.swf", "flashContent", 
+                "bin-release/MineSweepContext.swf", "flashContent", 
                 "800", "600", 
                 swfVersionStr, xiSwfUrlStr, 
                 flashvars, params, attributes);
@@ -98,7 +98,7 @@
                     </p>
                 <!--<![endif]-->
                     <a href="http://www.adobe.com/go/getflashplayer">
-                        <img src="http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash Player" />
+                        <img src="bin-release/http://www.adobe.com/images/shared/download_buttons/get_flash_player.gif" alt="Get Adobe Flash Player" />
                     </a>
                 <!--[if !IE]>-->
                 </object>
